Fix font size on large screens, align mobile menu properly

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body::-webkit-scrollbar-thumb {
   background-color: rgb(255, 255, 255); /* color of the scroll thumb */
 }
 
-@media (max-width: 4000px) {
+@media (max-width: 4800px) {
   html,
   body {
     font-size: 30px;
@@ -70,28 +70,28 @@ body::-webkit-scrollbar-thumb {
 @media (max-width: 3400px) {
   html,
   body {
-    font-size: 30px;
+    font-size: 20px;
   }
 }
 
 @media (max-width: 2400px) {
   html,
   body {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 
 @media (max-width: 1750px) {
   html,
   body {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
 @media (max-width: 1000px) {
   html,
   body {
-    font-size: 15px;
+    font-size: 14px;
   }
 }
 
